WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84295
[V8] Pass Isolate to v8Array()
https://bugs.webkit.org/show_bug.cgi?id=84295
Summary
[V8] Pass Isolate to v8Array()
Kentaro Hara
Reported
2012-04-18 16:01:20 PDT
The final objective is to pass Isolate around in V8 bindings. In this bug, we pass the Isolate to v8Array().
Attachments
Patch
(5.00 KB, patch)
2012-04-18 16:02 PDT
,
Kentaro Hara
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(4.82 KB, patch)
2012-04-23 13:05 PDT
,
Kentaro Hara
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(4.82 KB, patch)
2012-04-23 18:29 PDT
,
Kentaro Hara
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kentaro Hara
Comment 1
2012-04-18 16:02:41 PDT
Created
attachment 137795
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-23 12:08:57 PDT
Comment on
attachment 137795
[details]
Patch Rejecting
attachment 137795
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: #1 FAILED at 918. Hunk #2 succeeded at 3808 (offset 3 lines). 1 out of 2 hunks FAILED -- saving rejects to file Source/WebCore/bindings/scripts/CodeGeneratorV8.pm.rej patching file Source/WebCore/bindings/scripts/test/V8/V8TestObj.cpp Hunk #2 succeeded at 1295 (offset 208 lines). patching file Source/WebCore/bindings/v8/V8Binding.h Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Nate Chapin']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output:
http://queues.webkit.org/results/12512184
Kentaro Hara
Comment 3
2012-04-23 13:05:44 PDT
Created
attachment 138405
[details]
patch for landing
WebKit Review Bot
Comment 4
2012-04-23 17:56:54 PDT
Comment on
attachment 138405
[details]
patch for landing Rejecting
attachment 138405
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12519089
Kentaro Hara
Comment 5
2012-04-23 18:29:40 PDT
Created
attachment 138483
[details]
patch for landing
WebKit Review Bot
Comment 6
2012-04-23 22:12:32 PDT
Comment on
attachment 138483
[details]
patch for landing Clearing flags on attachment: 138483 Committed
r114997
: <
http://trac.webkit.org/changeset/114997
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug